# pre-commit-indents-to-spaces

./: .pre-commit-hooks.yaml  Makefile  README.md  pytest.ini  requirements-dev.txt  setup.cfg
src/indents_to_spaces/: __init__.py  convert.py
tests/: convert_test.py
tests/testdata/: indent_error_spaces_4.tf  indent_error_tabs_2.tf  indent_error_tabs_4.tf
