[bdist_wheel]
universal = True

[metadata]
name = pre-commit-indents-to-spaces
version = 0.0.2
description = Pre-commit hook to replace tabs with spaces in indents.
author = Oliv5
license = BSD 2-Clause License
license_file = LICENSE
url = https://github.com/oliv5/pre-commit-indents-to-spaces
project_urls =
    Bug Tracker = https://github.com/oliv5/pre-commit-indents-to-spaces/discussions
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.6.9
setup_requires =
    setuptools >= 46.4.0  # required to use attr to extract version
tests_require =
    pytest >= 7.0.1
test_suite = tests
zip_safe = False

[options.entry_points]
console_scripts =
    indents-to-spaces = indents_to_spaces:main

[options.packages.find]
where = src

[options.package_data]
indents_to_spaces = py.typed
